message MultiValueMapMessage {
  required bytes key = 1;
  // Present iff it's a set operation.
  optional bytes value = 2;
}

message MultiValueMapItemsSave {
  repeated bytes values = 1;
  // Index into MultiValueMapSave.senders.
  repeated uint32 senders = 2 [packed=true];
  repeated uint32 senderCounters = 3 [packed=true];
  repeated uint64 wallClockTimes = 4 [packed=true];
  repeated uint64 lamportTimestamps = 5 [packed=true];
}

// OPT: stores keys as bytes instead of string? Smaller but slower
// and less convenient.
message MultiValueMapSave {
  map<string, MultiValueMapItemsSave> entries = 1;
  repeated string senders = 2;
}
